# docs/swagger.json
@@ -313,29 +313,20 @@
                 "summary": "auth user and return access and refresh token",
                 "parameters": [
                     {
-                        "description": "User Email",
-                        "name": "email",
+                        "description": "Sign In Request",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "User Password",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.SignIn"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controllers.SignInResponse"
                         }
                     }
                 }
@@ -423,6 +414,35 @@
         }
     },
     "definitions": {
+        "controllers.SignInResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "msg": {
+                    "type": "string",
+                    "example": "Sign in successful"
+                },
+                "tokens": {
+                    "$ref": "#/definitions/controllers.TokenResponse"
+                }
+            }
+        },
+        "controllers.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "access": {
+                    "type": "string",
+                    "example": "access-token"
+                },
+                "refresh": {
+                    "type": "string",
+                    "example": "refresh-token"
+                }
+            }
+        },
         "models.Book": {
             "type": "object",
             "required": [
@@ -475,6 +495,23 @@
                     "type": "integer",
                     "maximum": 10,
                     "minimum": 1
+                }
+            }
+        },
+        "models.SignIn": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 255
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 255
                 }
             }
         },
